--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
         "allowJs": true,
         "sourceMap": true,
         "types": [
-            "@types/firefox-webext-browser"
+            "@types/firefox-webext-browser",
+            "@types/node"
         ],
         "baseUrl": "."
     }
