--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/firefox-webext-browser": "^82.0.0",
     "@types/mousetrap": "^1.6.8",
+    "@types/node": "^15.12.1",
     "copy-webpack-plugin": "^9.0.0",
     "lint-staged": "^11.0.0",
     "prettier": "^2.3.1",
